--- a/Frontend/src/Pages/QualityAssurance/quality-assurance.css
+++ b/Frontend/src/Pages/QualityAssurance/quality-assurance.css
@@ -7,11 +7,6 @@
     padding: 24px;
     margin-top: 80px;
 }
-
-
-
-
-
 .breadcrumb {
     display: flex;
     align-items: center;
@@ -55,18 +50,20 @@
     width: 50%;
 }
 
-
-
 .quality-title {
-    font-size: 60px;
+  margin-top: 30px;
+    font-size: 50px;
     /* text-5xl */
     font-weight: bold;
+    line-height: 72.2px;
     /* margin-bottom: 1rem; */
     font-family: 'Red Hat Display', sans-serif;
 }
 
-.quality-paragraph {
-    color: #4b5563;
+.quality-paragraph-one {
+  font-family: 'Manrope', sans-serif;
+  font-size: 16px;
+    color:#0a0a0a;
     line-height: 1.6;
 }
 
@@ -77,8 +74,6 @@
     margin-top: 100px;
     
 }
-
-
 .quality-img-desk  {
     width: 666px;
     height: 300px;
@@ -132,12 +127,13 @@
     gap: 24px;
     margin-top: 40px;
     /* mt-10 */
-}
-
-
-
-/* Certification text area */
-.certification-text {
+  }
+  
+  /* Certification text area */
+  .certification-text {
+  font-family: 'Manrope', sans-serif;
+  color: #0a0a0a;
+  font-size: 16px;
     width: 50%;
 }
 
@@ -159,6 +155,7 @@
     padding: 16px;
     margin-left: 40px;
     width: 50%;
+    
 }
 
 
@@ -169,8 +166,8 @@
     list-style-position: inside;
     color: #9D0A0E;
     font-family: 'Manrope', sans-serif;
-    font-size: 1rem;
-    line-height: 1.8;
+    font-size: 15px;
+    line-height: 22.4px;
 }
 
 
