technical documents done with responsive

--- a/Frontend/src/Pages/AboutUs/AboutUs.css
+++ b/Frontend/src/Pages/AboutUs/AboutUs.css
@@ -343,6 +343,7 @@
     line-height: 1.6;
     text-align: justify;
     color: #070912;
+    font-weight: 400;
   }
   .about-card-img {
     width: 60px;
@@ -357,7 +358,7 @@
   }
 
   .history-image {
-    width: 110%;
+    width: 106%;
     height: auto;
     padding-left: 0;
   }
@@ -430,7 +431,7 @@
     gap: 16px;
     width: 100%;
     height: auto;
-    margin-left: -16px;
+    margin-left: -10px;
   }
 
   .team-card {
