--- a/Frontend/src/Pages/Documents/Documents.css
+++ b/Frontend/src/Pages/Documents/Documents.css
@@ -93,3 +93,45 @@
     filter: brightness(200);
   }
   
+
+  @media (max-width: 768px) {
+    .tech-docs-wrapper {
+      padding: 60px 20px;
+    }
+  
+    .tech-docs-title {
+      font-size: 28px;
+      line-height: 1.4;
+      text-align: center;
+    }
+  
+    .tech-docs-grid {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+  
+    .tech-docs-img {
+      height: 200px;
+    }
+  
+    .tech-docs-card-title {
+      font-size: 16px;
+      height: auto;
+      width: 100%;
+    }
+  
+    .tech-docs-content {
+      padding: 12px 16px;
+    }
+  
+    .tech-docs-footer {
+      padding: 12px 16px;
+      justify-content: start;
+    }
+  
+    .tech-docs-download-icon {
+      width: 20px;
+      height: 20px;
+    }
+  }
+  
