--- a/Frontend/src/Pages/Documents/Documents.css
+++ b/Frontend/src/Pages/Documents/Documents.css
@@ -100,9 +100,11 @@
     }
   
     .tech-docs-title {
-      font-size: 28px;
+      padding-top: 40px;
+      font-size: 24px;
       line-height: 1.4;
-      text-align: center;
+      text-align: left;
+      font-weight: 800;
     }
   
     .tech-docs-grid {
