--- a/Frontend/src/Components/AboutUsSection/AboutUsSection.css
+++ b/Frontend/src/Components/AboutUsSection/AboutUsSection.css
@@ -8,8 +8,9 @@
     background-color: white;
     width: 100%;
     min-height: 900px;
-    padding: 112px 144px;
+    padding: 0px 144px;
     gap: 80px;
+    /* margin-top: -44px; */
   }
    
 .learn-more-btn {
