--- a/Frontend/src/Components/IndustriesServed/IndustriesServed.css
+++ b/Frontend/src/Components/IndustriesServed/IndustriesServed.css
@@ -4,8 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0; /* Matches py-10 */
     background-color: white;
+    margin-bottom: 100px;
+    /* margin-top: 50px; */
   }
   
   /* Section Subtitle */
@@ -106,6 +107,9 @@
     background-color: #991b1b; /* Matches hover:bg-red-800 */
   }
   @media (max-width: 768px) {
+    .industries-section{
+      margin-top: 100px;
+    }
     .industries-subtitle {
       font-size: 14px;
       line-height: 1.4;
