--- a/Frontend/src/Components/WhyChooseUsSection/WhyChooseUsSection.css
+++ b/Frontend/src/Components/WhyChooseUsSection/WhyChooseUsSection.css
@@ -2,8 +2,8 @@
 .why-choose-us {
     display: flex;
     width: 100%;
-    height: 100%;
-    margin-bottom: 90px;
+    height: auto;
+    margin-bottom: 100px;
   }
   
   /* Left Section */
@@ -170,7 +170,7 @@
   @media (max-width: 768px) {
     .why-choose-us {
       flex-direction: column;
-      margin-bottom: 60px;
+      margin-bottom: 100px;
     }
   
     .why-choose-left {
